--- a/package.json
+++ b/package.json
@@ -10,35 +10,41 @@
     "url": "https://github.com/scriptfoundry/thai-trainer.git"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@redux-beacon/debounce-event": "^1.0.2",
     "@redux-beacon/google-analytics-gtag": "^1.0.5",
     "@redux-beacon/logger": "^1.0.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "fast-levenshtein": "^2.0.6",
     "history": "^4.10.1",
     "localforage": "^1.7.3",
     "rc-slider": "^9.2.4",
-    "react": "^16.13.1",
-    "react-beautiful-dnd": "^13.0.0",
+    "react": "18.3.1",
     "react-circular-progressbar": "^2.0.3",
-    "react-dom": "^16.13.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
+    "react-dom": "18.3.1",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.29.0",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.3.0",
-    "redux": "^4.0.5",
+    "redux": "^4.2.1",
     "redux-beacon": "^2.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "node-sass": "^4.13.1",
-    "prop-types": "^15.7.2"
+    "@babel/core": "^7.26.9",
+    "@babel/eslint-parser": "^7.26.8",
+    "@babel/runtime": "^7.26.9",
+    "@craco/craco": "^7.1.0",
+    "eslint": "^9.20.1",
+    "prop-types": "^15.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "test:notify": "react-scripts test --env=jsdom --notify",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test --env=jsdom",
+    "test:notify": "craco test --env=jsdom --notify",
+    "eject": "craco eject",
     "css": "node-sass src/styles/sass/ -o src/styles/css",
     "css:build": "node-sass src/styles/sass/ -o src/styles/css --output-style compressed",
     "css:watch": "node-sass src/styles/sass/ -o src/styles/css --watch",
