--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@babel/runtime": "^7.26.9",
     "@craco/craco": "^7.1.0",
     "eslint": "^9.20.1",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
     "prop-types": "^15.8.1"
   },
   "scripts": {
