--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
     "@redux-beacon/google-analytics-gtag": "^1.0.5",
     "@redux-beacon/logger": "^1.0.0",
     "@reduxjs/toolkit": "^2.5.1",
-    "fast-levenshtein": "^2.0.6",
-    "history": "^4.10.1",
+    "fast-levenshtein": "^3.0.0",
+    "history": "^5.3.0",
     "localforage": "^1.7.3",
-    "rc-slider": "^9.2.4",
+    "rc-slider": "^11.1.8",
     "react": "18.3.1",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "18.3.1",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.29.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.3.0",
-    "redux": "^4.2.1",
+    "redux": "^5.0.1",
     "redux-beacon": "^2.1.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
