--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src/",
+    "format": "prettier --write src/",
     "preview": "vite preview"
   },
   "repository": {
@@ -47,6 +48,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "prettier": "^3.5.3",
     "sass": "^1.85.1",
     "sass-migrator": "^2.3.1",
     "vite": "^6.2.0"
